@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.15 to 3.16
+* added information message about journaled quota to quotacheck (Jan Kara, Alex Tomas)
 * added pointers to quota_nld and warnquota to some manpages (Jan Kara)
 * ported quota_nld to libnl-1.1 (Jan Kara)
 * let setquota batch mode accept comments and blank lines, add -c option (Jacky Bruno, Jan Kara)
